<resources>
    <string name="app_name">Wuthering Waves Waifu</string>
    <string name="about">about</string>
    <string name="character_name">character name</string>
    <string name="attribute">attribute</string>
    <string name="_5">5</string>
    <string name="profile_description">Profile Description</string>
    <string name="birth_date">Birth Date : </string>
    <string name="share">Share</string>
    <string name="rizal_putra_aditya">Rizal Putra Aditya</string>
    <string name="email">rizalputra@students.universitasmulia.ac.id</string>
</resources>