<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/material_dynamic_neutral95">

        <ImageView
            android:id="@+id/img_card"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded_img"
            android:clipToOutline="true"
            android:scaleType="fitXY"
            android:src="@drawable/img_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/character_name"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_card"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/card_attribute"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/attribute"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:iconSize="30dp"
            app:icon="@drawable/wuthering_waves_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/card_rarity"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/img_card"
            app:layout_constraintTop_toBottomOf="@id/card_title"
            app:layout_constraintVertical_bias="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/card_rarity"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="16sp"
            app:icon="@drawable/star_24px"
            app:iconGravity="end"
            app:iconTint="@color/gold"
            app:iconSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/card_attribute"
            app:layout_constraintTop_toBottomOf="@id/card_title"
            app:layout_constraintVertical_bias="0.5"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>