<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/detail_img"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:background="@color/fusion"
            android:src="@drawable/img_detail"
            app:layout_constraintBottom_toTopOf="@id/overlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/overlay"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="-100dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_img" />

        <ImageView
            android:id="@+id/detail_img_profile"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:layout_marginTop="-70dp"
            android:background="@drawable/rounded_img"
            android:clipToOutline="true"
            android:scaleType="fitXY"
            android:src="@drawable/img_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/overlay" />

        <TextView
            android:id="@+id/detail_attribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/attribute"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/detail_img_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/overlay" />

        <ImageView
            android:id="@+id/detail_img_attribute"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/icon_element"
            app:layout_constraintEnd_toStartOf="@id/detail_img_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_attribute" />

        <TextView
            android:id="@+id/detail_rarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/attribute"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detail_img_profile"
            app:layout_constraintTop_toTopOf="@id/overlay" />

        <ImageView
            android:id="@+id/detail_img_rarity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/star_24px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detail_img_profile"
            app:layout_constraintTop_toBottomOf="@id/detail_rarity"
            app:tint="@color/gold" />
        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_img_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/character_name"
            android:textSize="28sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/detail_title_desc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/profile_description"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/detail_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overlay" />

        <TextView
            android:id="@+id/detail_birth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/birth_date"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/detail_desc"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/detail_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/birth_date"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/detail_desc"
            app:layout_constraintStart_toEndOf="@id/detail_birth_title" />

        <TextView
            android:id="@+id/detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/action_share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_title_desc"
            android:padding="20dp"
            android:textSize="18sp"
            android:textAlignment="gravity"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detail_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp"
            android:text="@string/share"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>